# cmux-linux

./: .gitignore  Cargo.toml  README.md  build.rs  cmux_0.1.0_amd64.deb.sha256  ghostty.h  glslang_stub.c  stubs.c
.github/workflows/: ci.yml  release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: bell-notification-missing.md  close-pane-glarea-downcast-crash.md  knowledge-base.md  notify-rust-silent-fail.md  post-divider-drag-cursor-freeze.md  ssh-remote-binary-and-reconnect.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ghostty-fork.md
packaging/: CLAUDE.md
packaging/completions/: _cmux  cmux.bash  cmux.fish
packaging/desktop/: com.cmux_lx.terminal.desktop  com.cmux_lx.terminal.metainfo.xml
packaging/man/: cmux.1
packaging/rpm/: cmux.spec
packaging/scripts/: build-deb.sh  build-rpm.sh  validate-all.sh  validate-deb.sh  validate-rpm.sh
planning/debug/: post-divider-drag-cursor-freeze.md
resources/: cmux.desktop
scripts/: cmux-cli  setup-linux.sh
src/: app_state.rs  browser.rs  config.rs  main.rs  menus.rs  session.rs  shortcuts.rs  sidebar.rs  split_engine.rs  workspace.rs
src/cli/: discovery.rs  format.rs  mod.rs
src/ghostty/: callbacks.rs  input.rs  mod.rs  surface.rs
tests/: test_input.rs  test_wakeup.rs
(+240 files in other folders)
