[package]
name = "cmux-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.10.3"
tokio = { version = "1", features = ["full"] }
glib = "0.21.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.57"
